# BitEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
extension/: extension_config.cmake
extension/debit/: CMakeLists.txt  debit_extension.cpp
extension/debit/CUBIT-d/: CMakeLists.txt
extension/debit/CUBIT-d/src/bitmaps/: base_table.cpp  base_table.h
extension/debit/CUBIT-d/src/bitmaps/naive/: table.cpp  table.h
extension/debit/CUBIT-d/src/bitmaps/rabit/: segBtv.cpp  segBtv.h  table.cpp  table.h
extension/debit/CUBIT-d/src/bitmaps/ub/: table.cpp  table.h
extension/debit/CUBIT-d/src/bitmaps/ucb/: table.cpp  table.h
extension/debit/CUBIT-d/src/utils/: util.cpp
extension/debit/dbgen/: bm_dbgen.cpp  bmtpch_constants.cpp
extension/debit/dbgen/include/: bm_dbgen.hpp  bmtpch_constants.hpp
extension/debit/execution/operator/: GroupBy.cpp  HashJoin.cpp  TableScan.cpp
extension/debit/execution/tpch/: Q1.cpp  Q14.cpp  Q5.cpp  Q6.cpp  bitmap_groupby.cpp  bitmap_hash_join.cpp  bitmap_table_scan.cpp
extension/debit/execution/tpch/executor/: TableScan.cpp
extension/debit/execution/tpch/query/: Q1.cpp  Q10.cpp  Q12.cpp  Q15.cpp  Q17.cpp  Q19.cpp  Q3.cpp  Q4.cpp  Q5.cpp  Q6.cpp  Q8.cpp
extension/debit/execution/tpch/test/: DebitGather.cpp  DebitSIMD.cpp  DuckdbSIMD.cpp  groupbyTest.cpp  hashjoin.cpp  projectionTest.cpp
extension/debit/include/: debit_extension.hpp
extension/debit/include/execution/tpch/: bitmap_groupby.hpp  bitmap_hash_join.hpp  bitmap_table_scan.hpp
src/: CMakeLists.txt
src/execution/operator/aggregate/: physical_perfecthash_aggregate.cpp
src/execution/operator/join/: physical_hash_join.cpp
src/execution/operator/scan/: physical_table_scan.cpp
src/execution/physical_plan/: plan_get.cpp
src/include/duckdb/execution/operator/scan/: physical_table_scan.hpp
src/include/duckdb/function/: compression_function.hpp
src/include/duckdb/main/: client_context.hpp
src/include/duckdb/storage/: data_table.hpp
src/include/duckdb/storage/compression/: empty_validity.hpp
src/include/duckdb/storage/table/: column_data.hpp  column_segment.hpp  row_group.hpp  row_group_collection.hpp
src/main/: client_context.cpp
src/parallel/: executor.cpp
src/storage/: data_table.cpp
src/storage/compression/: bitpacking.cpp  dict_fsst.cpp  dictionary_compression.cpp  fixed_size_uncompressed.cpp  fsst.cpp  numeric_constant.cpp  rle.cpp  string_uncompressed.cpp  validity_uncompressed.cpp
src/storage/compression/roaring/: common.cpp
src/storage/table/: column_segment.cpp  row_group.cpp  row_group_collection.cpp
